--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,13 @@
     <string name="textBtnDivide">/</string>
     <string name="textBtnMinus">-</string>
     <string name="textBtnOne">1</string>
-    <string name="textBtnTow">2</string>
+    <string name="textBtnTwo">2</string>
     <string name="textBtnThree">3</string>
     <string name="textBtnFour">4</string>
     <string name="textBtnFive">5</string>
     <string name="textBtnSix">6</string>
     <string name="textBtnSeven">7</string>
-    <string name="textBtnHeight">8</string>
+    <string name="textBtnEight">8</string>
     <string name="textBtnNine">9</string>
     <string name="textBtnZero">0</string>
 </resources>
