Set constant to values file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="textBtnNine">9</string>
     <string name="textBtnZero">0</string>
     <string name="string_error">Error</string>
+    <string name="ipAddress">10.0.2.2</string>
 </resources>
