--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="ipAddress">10.0.2.2</string>
     <string name="last_result">Dernère opération</string>
     <string name="calculator">Calculatrice</string>
+    <string name="inputCounter_text">Compteur de caractères</string>
 </resources>
